--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,11 @@ body, main{
     justify-content: center;
 }
 
+#btn1, #btn2, #btn3, #btn4{
+    display: none;
+}
+
+
 #viewHighScore{
     display: flex;
 }
